<resources>
    <string name="app_name">Charge</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="how_are_you_feeling_now">How are you feeling now?</string>
    <string name="mind">Mind</string>
    <string name="body">Body</string>
    <string name="sign_out">Sign Out</string>
    <string name="suggest_an_activity">Suggest An Activity</string>
    <string name="or_select_an_activity_from_below">Or select an activity from below</string>
    <string name="account_link">Account Link</string>
    <string name="gratitude_image">Gratitude Image</string>
    <string name="i_m_grateful_for">I\'m grateful for</string>
    <string name="add_item">Add Item</string>
    <string name="my_steps">My Steps</string>
    <string name="total_steps_lifetime">Total Steps (Lifetime)</string>
    <string name="current_steps">Current Steps</string>
    <string name="quotes">Inspiration</string>
    <string name="_0">0</string>
    <string name="start_steps">Start Steps</string>
    <string name="save_steps">Save Steps</string>
    <string name="gratitude_list">Gratitude List</string>
    <string name="title_activity_journaling">JournalingActivity</string>
    <string name="emoticon">Emoticon</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="doodle">Doodle</string>
    <string name="walking">Walking</string>
    <string name="gratitude">Gratitude</string>
    <string name="move">Movement</string>
    <string name="journaling">Journaling</string>
    <string name="MyJournal">My Journal</string>
    <string name="JournalTitle">Journal Title (max 30 char)</string>
    <string name="saveEntry">SAVE</string>
    <string name="deleteEntry">DELETE</string>
    <string name="editEntry">EDIT</string>
    <string name="JournalEntry">Write down your thoughts and feelings for today…</string>
    <string name="Title">Video title</string>
    <string name="inspire_me">Inspire Me</string>
    <string name="title_inspiration">Inspiration</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="edit_username">Edit Username</string>
    <string name="update_username">Update Username</string>
    <string name="youtube_video_stills">YouTube video stills</string>
    <string name="youtube_url">https://www.googleapis.com/youtube/v3/search?part=snippet&amp;channelId=UCBINFWq52ShSgUFEoynfSwg&amp;maxResults=60&amp;key=AIzaSyAmsvAi7RXbMFsT-m9KUqhRXPDOGp7A9zY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_registered_click_here_to_sign_up">Not registered, click here to Sign Up</string>
    <string name="verifying_user">Verifying User</string>
</resources>