<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPageActivity">

    <TextView
        android:id="@+id/feelingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/how_are_you_feeling_now"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/charge_purple"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/feelingsTable"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feelingTextView">

        <TableRow
            android:id="@+id/mindTableRow"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mindTextView"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mind"
                android:textColor="@color/charge_purple"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/mind1ImageView"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/e1" />

            <ImageView
                android:id="@+id/mind2ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:srcCompat="@drawable/e2" />

            <ImageView
                android:id="@+id/mind3ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:srcCompat="@drawable/e3" />

            <ImageView
                android:id="@+id/mind4ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:srcCompat="@drawable/e4" />

            <ImageView
                android:id="@+id/mind5ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:srcCompat="@drawable/e5" />
        </TableRow>

        <TableRow
            android:id="@+id/bodyTableRow"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bodyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/body"
                android:textColor="@color/charge_purple"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/body1ImageView"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/e1" />

            <ImageView
                android:id="@+id/body2ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:srcCompat="@drawable/e2" />

            <ImageView
                android:id="@+id/body3ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:srcCompat="@drawable/e3" />

            <ImageView
                android:id="@+id/body4ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:srcCompat="@drawable/e4" />

            <ImageView
                android:id="@+id/body5ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:srcCompat="@drawable/e5" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/suggestButton"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Suggest An Activity"
        android:backgroundTint="@color/charge_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feelingsTable" />

</androidx.constraintlayout.widget.ConstraintLayout>